--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ body{
 	font-weight: 700;
 	color: #ffffff;
 	text-shadow: 2px 2px 6px rgba(0,0,0,0.3); 
-	margin: 40px 0 30px;
+	margin: 40px 0 50px;
 	letter-spacing: 1px;          
 	background: linear-gradient(90deg, #004080);
 	padding: 20px;
@@ -559,6 +559,7 @@ body{
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
+  flex-direction:row;
 	gap: 40px;
   }
   
@@ -644,3 +645,25 @@ body{
 	transform: translateX(-50%) translateY(0);
   }
 
+.meses, #eventosDinamicos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+  max-width: 1400px;
+  margin: 0 auto 50px auto;
+}
+
+
+#eventosDinamicos .mes {
+ background: rgba(255, 255, 255, 0.85);
+	border-radius: 15px;
+	box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+	padding: 20px;
+	flex: 1 1 45%;
+	min-width: 350px;
+	transition: transform 0.2s;
+}
+#btnAgregarEvento {
+display: inline-block;
+}
